fix: smaller spacing

--- a/src/components/ticket/styles.css
+++ b/src/components/ticket/styles.css
@@ -207,6 +207,7 @@
   width: 100%;
   display: block;
   text-align: center;
+  padding-top: var(--spacing-02);
   padding-bottom: var(--spacing-02);
 }
 
